<resources>
    <string name="app_name">Grown Bunny</string>
    <string name="welcome_message">Welcome To</string>
    <string name="reset_password">Reset Password</string>
    <string name="register_now">Don\'t have an account? Register</string>
    <string name="log_in">LOG IN</string>
    <string name="register">REGISTER</string>
    <string name="welcome_message_appname">GrownBunny</string>
    <string name="password">Password\n</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password\n</string>
    <string name="fertilizer_benefits">Fertilizer Benefits of Rabbit Droppings</string>
    <string name="growth_prediction">Growth Prediction</string>
    <string name="disease_detection">Disease Detection</string>
<!--    <string name="upload_image">Upload Image</string>-->
    <string name="contact_vet">Contact Vet</string>
    <string name="select_image">Select image</string>
    <string name="use_camera_or_gallery">Use Camera or Select from Gallery</string>
    <string name="symptoms">Any symptoms:</string>
    <string name="detect_disease">Detect Disease</string>
    <string name="predict_growth">Predict Growth</string>
    <string name="enter_age_of_rabbit">Enter age of rabbit</string>
    <string name="daily_food_amount">Daily food amount</string>
    <string name="type_of_food_vegetables_rabbit_pellets">Type of food (vegetables / rabbit pellets)</string>
    <string name="growth_description">The growth of a rabbit is .......</string>
    <string name="enter_email">Enter Email</string>
    <string name="confirm">Confirm</string>
    <string name="veterinarian_text">Veterinarians</string>
    <string name="contact_vet_description">Are you a vet?\n\nDo you like to register and free advise our furry friend?\n</string>
    <string name="register_now_vet">REGISTER NOW</string>
</resources>