<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_green">
<!--tools:context=".RegisterActivity">-->

    <Space
        android:layout_width="match_parent"
        android:layout_height="80dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <ImageView
            android:id="@+id/welcome_text_appname"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:src="@drawable/app_name"
            android:textColor="@color/black"
            android:layout_gravity="center"/>

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/image"
            android:src="@drawable/bunny"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/login_email"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:background="@drawable/green_boarder"
            android:drawableStart="@drawable/email"
            android:drawablePadding="8dp"
            android:hint="@string/email"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/boarder_green" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="15dp"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false"
            app:passwordToggleTint="@color/background_green">

            <EditText
                android:id="@+id/login_password"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@drawable/green_boarder"
                android:drawableStart="@drawable/password"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/boarder_green" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:text="@string/log_in"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:background="@drawable/green_boarder_button"/>

        <TextView
            android:id="@+id/regRedirectText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:padding="8dp"
            android:text="@string/register_now"
            android:textColor="@color/boarder_green"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/resetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="1dp"
            android:padding="1dp"
            android:text="@string/reset_password"
            android:textColor="@color/red"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>