<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GrowthPredictionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/normal_background_green">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/normal_background_green"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="68dp"
                android:layout_marginStart="-90dp"
                android:src="@drawable/bunny">

            </ImageView>

            <TextView
                android:id="@+id/disease_detection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:padding="8dp"
                android:text="@string/growth_prediction"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <!--            <ImageButton-->
            <!--                android:id="@+id/logout_btn"-->
            <!--                android:layout_width="50dp"-->
            <!--                android:layout_height="40dp"-->
            <!--                android:layout_gravity="center"-->
            <!--                android:background="@color/white"-->
            <!--                android:clickable="true"-->
            <!--                app:srcCompat="@drawable/baseline_logout_24" />-->
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="415dp"
        android:layout_height="650dp"
        android:orientation="vertical"
        android:background="@color/white">

        <EditText
            android:id="@+id/rabbit_age"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:background="@drawable/green_box_border"
            android:drawablePadding="8dp"
            android:hint="@string/enter_age_of_rabbit"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/normal_background_green" />

        <EditText
            android:id="@+id/rabbit_food_type"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/green_box_border"
            android:drawablePadding="8dp"
            android:hint="@string/type_of_food_vegetables_rabbit_pellets"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/normal_background_green" />
        <EditText
            android:id="@+id/daily_food_amount"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/green_box_border"
            android:drawablePadding="8dp"
            android:hint="@string/daily_food_amount"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/normal_background_green" />
        <Button
            android:id="@+id/growth_predict_button"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/green_boarder_button"
            android:text="@string/predict_growth"
            android:textColor="@color/black"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <ImageView

            android:id="@+id/predicted_graph"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/growth_prediction_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:padding="8dp"
            android:text="@string/growth_description"
            android:textColor="@color/black"
            android:textSize="14sp" />


    </LinearLayout>
</LinearLayout>