<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_green">
    <!--tools:context=".RegisterActivity">-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="70dp"
        >

        <ImageView
            android:id="@+id/welcome_text_appname"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:src="@drawable/app_name"
            android:textColor="@color/black"
            android:layout_gravity="center"/>

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/image"
            android:src="@drawable/bunny"
            android:layout_gravity="center"/>

    </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingEnd="20dp">

            <EditText
                android:id="@+id/reg_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/green_boarder"
                android:drawableStart="@drawable/account"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/boarder_green"
                android:hint="@string/name"
                android:padding="8dp" />

            <EditText
                android:id="@+id/reg_email"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@drawable/green_boarder"
                android:drawableStart="@drawable/email"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/boarder_green"
                android:hint="@string/email"
                android:padding="8dp" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="5dp"
                app:passwordToggleEnabled="true"
                app:hintEnabled="false"
                app:passwordToggleTint="@color/background_green">

                <EditText
                    android:id="@+id/register_password"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:background="@drawable/green_boarder"
                    android:drawableStart="@drawable/password"
                    android:drawablePadding="8dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/boarder_green" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                app:passwordToggleEnabled="true"
                app:hintEnabled="false"
                android:layout_marginTop="5dp"

                app:passwordToggleTint="@color/background_green">

                <EditText
                    android:id="@+id/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:background="@drawable/green_boarder"
                    android:drawableStart="@drawable/password"
                    android:drawablePadding="8dp"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/boarder_green" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/boarder_green"
                android:text="* Minimum one Lowercase"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:id="@+id/txtLower"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/boarder_green"
                android:text="* Minimum one uppercase"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:id="@+id/txtUpper"/>

            <TextView
                android:id="@+id/txtNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="* Minimum one number"
                android:textColor="@color/boarder_green"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/boarder_green"
                android:text="* At least 8 characters"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:id="@+id/txtChar"/>

            <Button
                android:id="@+id/reg_btn"
                android:layout_width="120dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:text="@string/register"
                android:layout_marginTop="21dp"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:background="@drawable/green_boarder_button"/>
        </LinearLayout>

    </LinearLayout>