<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_marginBottom="60dp"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/normal_background_green"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/normal_background_green"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="68dp"
                android:layout_marginStart="-30dp"
                android:src="@drawable/bunny">

            </ImageView>

            <ImageView
                android:layout_width="245dp"
                android:layout_height="60dp"
                android:layout_marginTop="2dp"
                android:src="@drawable/app_name_white_font">

            </ImageView>

    <!--       -->

    <!--            <ImageButton-->
    <!--                android:id="@+id/logout_btn"-->
    <!--                android:layout_width="50dp"-->
    <!--                android:layout_height="40dp"-->
    <!--                android:layout_gravity="center"-->
    <!--                android:background="@color/white"-->
    <!--                android:clickable="true"-->
    <!--                app:srcCompat="@drawable/baseline_logout_24" />-->
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">


        <androidx.cardview.widget.CardView
            android:id="@+id/growth_prediction"
            android:layout_width="340dp"
            android:layout_height="100dp"
            android:clickable="true"
            app:cardCornerRadius="25dp"
           >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:background="@drawable/card_boarder">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@color/white"
                    android:padding="10dp"

                    android:layout_marginEnd="40dp">

                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/growth_prediction"
                    android:textColor="@color/boarder_green"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginEnd="18dp"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/disease_detection"
            android:layout_width="340dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="25dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:background="@drawable/card_boarder"
                >

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@color/white"
                    android:padding="10dp"
                    android:layout_marginEnd="45dp"
                    android:layout_marginStart="25dp"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/disease_detection"
                    android:textColor="@color/boarder_green"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginEnd="40dp"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/fertilizer_benefits"
            android:layout_width="340dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="25dp"
            android:background="@color/light_brown"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:background="@drawable/card_boarder"
                >

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="64dp"
                    android:layout_marginStart="70dp"
                    android:background="@color/white"
                    android:padding="10dp" />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/fertilizer_benefits"
                    android:textColor="@color/boarder_green"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginEnd="70dp"
                    android:layout_marginStart="25dp"
                    android:textAlignment="center"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/connect_vet"
            android:layout_width="340dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="25dp"
            android:background="@color/light_brown"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:background="@drawable/card_boarder">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@color/white"
                    android:padding="10dp"
                    android:layout_marginStart="70dp"
                    />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_vet"
                    android:textColor="@color/boarder_green"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginEnd="70dp"
                    android:layout_marginStart="25dp"
                    android:textAlignment="center"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</LinearLayout>





